<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_android">Hello Android!!</string>
    <string name="btn_toast">TOAST</string>
    <string name="btn_google">Google</string>
    <string name="btn_dial">DIAL</string>
    <string name="btn_other">Other</string>
    <string name="btn_finish">Finish</string>
    <string name="text_other">Other</string>
</resources>
